PE - add permissions to controllers