@@ -505,7 +505,7 @@ public class DashboardController extends BaseController {
             } catch (ThingsboardException e) {
                 return false;
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @ApiOperation(value = "Get Home Dashboard (getHomeDashboard)",
